# NS-2RA

./: .gitignore  README.md  pyproject.toml
examples/: order_system.md
ns_r2a/: __init__.py  cli.py  l0_generate.py  l0_normalize.py  l1_graph.py  l2_verify.py  llm.py  render.py  repair.py  schemas.py
ns_r2a.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: fakes.py  test_l1_graph.py  test_l2_verify.py  test_render.py  test_repair.py
