[project]
name = "ns-r2a"
version = "0.1.0"
description = "Neuro-Symbolic Requirements-to-Architecture: local-LLM architecture generation with symbolic verification and counterexample-guided repair"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "ollama>=0.4",
    "networkx>=3.2",
    "z3-solver>=4.13",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ns-r2a = "ns_r2a.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ns_r2a*"]
